<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Вдох -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/tv_inhale"
            android:textSize="16sp" />

        <NumberPicker
            android:id="@+id/np_inhale"
            android:layout_width="wrap_content"
            android:layout_height="40dp" />
    </LinearLayout>

    <View
        android:layout_marginBottom="16dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="5dp"
        android:background="@color/accent" />

    <!-- Задержка вдоха -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/tv_delay_inhale"
            android:textSize="16sp" />

        <NumberPicker
            android:id="@+id/np_delay_inhale"
            android:layout_width="wrap_content"
            android:layout_height="40dp" />
    </LinearLayout>

    <View
        android:layout_marginBottom="16dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="5dp"
        android:background="@color/accent" />

    <!-- Выдох -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/tv_exhale"
            android:textSize="16sp" />

        <NumberPicker
            android:id="@+id/np_exhale"
            android:layout_width="wrap_content"
            android:layout_height="40dp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="5dp"
        android:layout_marginBottom="16dp"
        android:background="@color/accent" />

    <!-- Задержка выдоха -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/tv_delay_exhale"
            android:textSize="16sp" />

        <NumberPicker
            android:id="@+id/np_delay_exhale"
            android:layout_width="wrap_content"
            android:layout_height="40dp" />
    </LinearLayout>

</LinearLayout>